force-app/main/default/objects/Journal_Worklog__c/Journal_Worklog__c.object-meta.xml
<CustomObject>
    <label>Journal Worklog</label>
    <nameField>
        <displayFormat>JW-{000000}</displayFormat>
        <label>Journal Worklog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Worklogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>