force-app/main/default/objects/Journal_Worklog__c/fields/New_Journal_States__c.field-meta.xml
<CustomField>
    <fullName>New_Journal_States__c</fullName>
    <label>New Journal States</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ny - Første udkast</fullName>
            </value>
            <value>
                <fullName>Intern - Ny haster</fullName>
            </value>
            <value>
                <fullName>Klar til afsendelse</fullName>
            </value>
            <value>
                <fullName>Gennemgang - Getaccept</fullName>
            </value>
            <value>
                <fullName>Intern - Mangelfuld tjekliste</fullName>
            </value>
            <value>
                <fullName>Intern - Tinglysning haster</fullName>
            </value>
            <value>
                <fullName>Tinglysning</fullName>
            </value>
            <value>
                <fullName>Tinglysning - Mangler info</fullName>
            </value>
            <value>
                <fullName>Færdig</fullName>
            </value>
            <value>
                <fullName>complete</fullName>
            </value>
            <value>
                <fullName>Gennemgang Get Accept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>