force-app/main/default/objects/Journal_Worklog__c/fields/New_Responsible_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>New_Responsible_Lawyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Responsible Lawyer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Journal_Worklogs_New_Responsible_Lawyer</relationshipName>
    <type>Lookup</type>
</CustomField>