force-app/main/default/objects/Journal_Worklog__c/fields/Old_GA_Reply_Status__c.field-meta.xml
<CustomField>
    <fullName>Old_GA_Reply_Status__c</fullName>
    <label>Old GA - Reply Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting agent</fullName>
            </value>
            <value>
                <fullName>Awaiting customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>