force-app/main/default/objects/Journal_Worklog__c/fields/Old_Journal_States__c.field-meta.xml
<CustomField>
    <fullName>Old_Journal_States__c</fullName>
    <label>Old Journal States</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ny - Første udkast</fullName>
            </value>
            <value>
                <fullName>Gennemgang - Getaccept</fullName>
            </value>
            <value>
                <fullName>Færdig</fullName>
            </value>
            <value>
                <fullName>public_registration</fullName>
            </value>
            <value>
                <fullName>Færdig ny process</fullName>
            </value>
            <value>
                <fullName>Tinglysning</fullName>
            </value>
            <value>
                <fullName>Intern - Ny haster</fullName>
            </value>
            <value>
                <fullName>Intern - Opfølgning</fullName>
            </value>
            <value>
                <fullName>new</fullName>
            </value>
            <value>
                <fullName>Hastesager (1-3 dage)</fullName>
            </value>
            <value>
                <fullName>client_review</fullName>
            </value>
            <value>
                <fullName>Klar til afsendelse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>