force-app/main/default/objects/Journal_Worklog__c/fields/Old_Responsible_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Old_Responsible_Lawyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Responsible Lawyer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Journal_Worklogs</relationshipName>
    <type>Lookup</type>
</CustomField>