force-app/main/default/objects/Journal_Worklog__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Journal Worklogs</relationshipLabel>
    <relationshipName>Journal_Worklogs</relationshipName>
    <type>Lookup</type>
</CustomField>